--- a/AC Career Mode/AC Career Mode.csproj
+++ b/AC Career Mode/AC Career Mode.csproj
@@ -25,6 +25,9 @@
     <None Update="CareerMode.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="logs\placeholder.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
