--- a/DemoLibrary/DemoLibrary.csproj
+++ b/DemoLibrary/DemoLibrary.csproj
@@ -9,8 +9,15 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />
+	  <PackageReference Include="protobuf-net" Version="3.2.16" />
+	  <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />    
+	  
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Classes\" />
   </ItemGroup>
 
 </Project>
