--- a/AC Career Mode/AC Career Mode.csproj
+++ b/AC Career Mode/AC Career Mode.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DemoLibrary\DemoLibrary.csproj" />
+    <ProjectReference Include="..\DemoLibrary\DBLink.csproj" />
   </ItemGroup>
 
   <ItemGroup>
