Moved all utilities and global variables to its own project

--- a/AC Career Mode/AC Career Mode.csproj
+++ b/AC Career Mode/AC Career Mode.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DemoLibrary\DBLink.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
