--- a/AC Career Mode/AC Career Mode.csproj
+++ b/AC Career Mode/AC Career Mode.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DemoLibrary\DBLink.csproj" />
     <ProjectReference Include="..\Utils\Utilities.csproj" />
+    <ProjectReference Include="..\ViewUtils\ViewUtils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
