Converted utils to WPF project

--- a/AC Career Mode/AC Career Mode.csproj
+++ b/AC Career Mode/AC Career Mode.csproj
@@ -14,8 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DemoLibrary\DBLink.csproj" />
-    <ProjectReference Include="..\Utils\Utilities.csproj" />
-    <ProjectReference Include="..\ViewUtils\ViewUtils.csproj" />
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
